--- a/integration/src/assets/css/link.css
+++ b/integration/src/assets/css/link.css
@@ -6,3 +6,21 @@
 .link:hover {
   @apply text-blue-button;
 }
+
+.link-rounded {
+  @apply text-white bg-blue-button rounded-full px-4;
+  padding-top: 8px;
+  padding-bottom: 11px;
+}
+
+.link-rounded:hover {
+  @apply bg-white text-blue-text;
+}
+
+.link-rounded--white {
+  @apply bg-white text-blue-text;
+}
+
+.link-rounded--white:hover {
+  @apply bg-blue-button text-white;
+}
