--- a/integration/src/assets/css/link.css
+++ b/integration/src/assets/css/link.css
@@ -19,6 +19,7 @@
 
 .link-rounded--white {
   @apply bg-white text-blue-text;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
 }
 
 .link-rounded--white:hover {
